[gd_scene load_steps=4 format=3 uid="uid://bhrpqjhwmm76l"]

[ext_resource type="Script" path="res://backend/combat_scene_script.gd" id="1_kx4jc"]
[ext_resource type="Texture2D" uid="uid://bj4ca5d8acjt" path="res://frontend/props/fight_scene_background_alt.jpg" id="2_phfyb"]
[ext_resource type="PackedScene" uid="uid://0qgbbwsrg7dx" path="res://frontend/health_bar.tscn" id="4_kt6v4"]

[node name="CombatScene" type="Node2D"]
position = Vector2(580, 313)
script = ExtResource("1_kx4jc")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("2_phfyb")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 96)
zoom = Vector2(1.125, 1.125)

[node name="HealthBar" parent="." instance=ExtResource("4_kt6v4")]
offset_left = -315.0
offset_top = 145.0
offset_right = -315.0
offset_bottom = 145.0
scale = Vector2(0.68146, 0.68146)

[node name="HealthBar2" parent="." instance=ExtResource("4_kt6v4")]
offset_left = 33.0
offset_top = 141.0
offset_right = 33.0
offset_bottom = 141.0
scale = Vector2(0.681, 0.681)

[node name="ActionContainer" type="VBoxContainer" parent="."]
offset_left = -182.0
offset_top = 88.0
offset_right = -102.0
offset_bottom = 145.0
pivot_offset = Vector2(231, 189)

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
